--- a/modify2/modify2.html
+++ b/modify2/modify2.html
@@ -113,7 +113,7 @@
          </div>
       </section>
       <!----------------------------------------------------------------->
-       <section class="container">
+       <section class="container border-bottom">
           <div class="row ">
               <div class="col-md-9">
                <ul class="nav nav-pills mb-3 custom-nav-pills" id="pills-tab" role="tablist">
@@ -299,7 +299,7 @@
                            </div>
                
                            <!----------------------------------------------------------------->
-                           <section class="container">
+                           <section class="container border-bootom">
                               <div class="py-5">
                                     <h3 class="headings py-3">Facilities</h3>
                                     <div class="row">
@@ -323,9 +323,9 @@
                                     </div>
                                </div>
                            </section>
-                           <hr>
+                          
                            <!------------------------------------------------------------------------->
-                           <section class="container">
+                           <section class="container border-bootom">
                               <div class="py-5">
                                     <h3 class="headings py-3">Hotel Services</h3>
                                     <div class="row">
@@ -349,7 +349,6 @@
                                     </div>
                                </div>
                            </section>
-                           <hr>
                            <!------------------------------------------------------------->
                                <section class="container">
                                   <div class="py-5">
@@ -373,7 +372,7 @@
               </div>
          </div>
        </section>
-       <hr>
+
        <!------------------------------------------------------------>
        <section class="container footer-section">
          <div class="row">
